--- a/public/template/tabhead.html
+++ b/public/template/tabhead.html
@@ -1,2 +1,2 @@
-<div ng-click="selected = val" ng-class="{ 'selected' : selected == val }" 
+<div id='{{val}}_tabhead' ng-click="selected = val" ng-class="{ 'selected' : selected == val }" 
 class="tab">{{val}}</div>
